--- a/precios.html
+++ b/precios.html
@@ -150,34 +150,34 @@
                     <td>50.000</td>
                 </tr>
                 <tr>
-                    <td>Cat Chow 10k</td>
-                    <td>Alimento Balanceado</td>
-                    <td>50.000</td>
+                    <td>Mordillo Chico</td>
+                    <td>Juguetes</td>
+                    <td>4.000</td>
                 </tr>
                 <tr>
-                    <td>Cat Chow 10k</td>
-                    <td>Alimento Balanceado</td>
-                    <td>50.000</td>
+                    <td>Mordillo Mediano</td>
+                    <td>Juguetes</td>
+                    <td>6.000</td>
                 </tr>
                 <tr>
-                    <td>Cat Chow 10k</td>
-                    <td>Alimento Balanceado</td>
-                    <td>50.000</td>
+                     <td>Mordillo Grande</td>
+                    <td>Juguetes</td>
+                    <td>8.000</td>
                 </tr>
                 <tr>
-                    <td>Cat Chow 10k</td>
-                    <td>Alimento Balanceado</td>
-                    <td>50.000</td>
+                     <td>Pelota N°3</td>
+                    <td>Juguetes</td>
+                    <td>3.000</td>
                 </tr>
                 <tr>
-                    <td>Cat Chow 10k</td>
-                    <td>Alimento Balanceado</td>
-                    <td>50.000</td>
+                     <td>Pelota N°4</td>
+                    <td>Juguetes</td>
+                    <td>4.000</td>
                 </tr>
                 <tr>
-                    <td>Cat Chow 10k</td>
-                    <td>Alimento Balanceado</td>
-                    <td>50.000</td>
+                    <td>Pelota N°5</td>
+                    <td>Juguetes</td>
+                    <td>5.000</td>
                 </tr>
             </table>
 
