--- a/precios.html
+++ b/precios.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="mensaje"> <!--MENSAJE CABECERA-->
-            <p class="msj">*Envio GRATIS en compras mayores a $50.000*&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;*20% de Decuento pagando con Transferencia Bancaria*</p>
+            <p class="msj">*Envio GRATIS en compras mayores a $50.000*&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;*15% de descuento pagando con transferencia bancaria*</p>
         </div>
 
         <div class="flexheader">
