--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="mensaje"> <!--MENSAJE CABECERA-->
-            <p class="msj">*Envio GRATIS en compras mayores a $50.000*&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;*15% de descuento pagando con transferencia bancaria*</p>
+            <p class="msj">*Envio GRATIS en compras mayores a $50.000*;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;*15% de descuento pagando con transferencia bancaria*</p>
         </div>
 
         <div class="flexheader">
